--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,9 @@ dependencies {
 
     //////////////// Room /////////////////
 
-    def room_version = "2.3.0"
-    implementation("androidx.room:room-runtime:$room_version")
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation("androidx.room:room-runtime:2.3.0")
+    implementation("androidx.room:room-ktx:2.3.0")
+    kapt "androidx.room:room-compiler:2.3.0"
 
     /////////////////// Google tests /////////////////////////
 
