--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,19 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'com.google.firebase:firebase-firestore-ktx:23.0.3'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
+
+    // WorkManager
+    implementation 'androidx.work:work-runtime-ktx:2.6.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    // LifeCycler - to use notification
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1"
 
 
     /////////////// Retrofit ///////////////////
